# waygon

./: .dockerignore  .gitignore  Makefile  package-lock.json
docker/: docker-compose.yml
env/: .env.dev.example  .env.prod.example
src/mobile/: .easignore  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  LICENSE.md  README.md  app.config.ts  babel.config.js  eas.json  package.json
src/server/: Dockerfile  README.md  procfile.dev  pyproject.toml
src/server/lib/app/: settings.py
src/server/lib/core/: admin.py
src/server/lib/core/migrations/: 0001_initial.py
src/server/lib/dispatch/: forms.py  tables.py  urls.py  views.py
src/server/lib/dispatch/templates/dispatch/: base.html
src/server/lib/dispatch/templates/dispatch/account/: index.html  list.html
src/server/lib/dispatch/templates/dispatch/driver/: driver.html
src/server/lib/dispatch/templates/dispatch/driver/partials/: details.html  list.html
src/server/lib/dispatch/templates/dispatch/rider/: rider.html
src/server/lib/dispatch/templates/dispatch/rider/partials/: list.html
src/server/lib/dispatch/templates/dispatch/trip/: trip.html
src/server/lib/dispatch/templates/dispatch/trip/partials/: details.html  list.html
src/server/lib/trip/migrations/: 0001_initial.py
src/server/src/config/: api.py  middleware.py  settings.py  urls.py  urls_admin.py
src/server/src/core/: api.py  models.py
src/server/src/core/management/commands/: bootstrap_admin.py
src/server/src/core/migrations/: 0002_alter_account_phone.py
src/server/src/core/templates/core/trips/partials/: details.html
src/server/src/dashboard/templates/cotton/: nav_child.html  nav_item.html  nav_section.html  navbar.html
src/server/src/dashboard/templates/cotton/navbar/: item.html
src/server/src/dashboard/templates/dashboard/: base.html
src/server/src/shell/: urls.py  utils.py  views.py
src/server/src/shell/templates/cotton/: drawer.html
src/server/src/shell/templates/shell/: base.html  home.html
src/server/src/shell/templates/shell/drawers/: test_drawer.html
src/server/src/shell/templates/shell/pages/: destination.html
src/server/vite/: package-lock.json
src/server/vite/assets/css/: main.css
src/server/vite/static/: manifest.json
src/server/vite/static/vite/: test-DkwRwu2g.css
test/: README.md
(+682 files in other folders)
