[project]
name = "server"
description = "None"
readme = "README.md"
version = "0.1.0"

requires-python = ">=3.13"

dependencies = [
    "django>=5.2.4",
    "django-htmx>=1.23.2",
    "django-tables2>=2.7.5",
    "django-vite>=3.1.0",
    "django-cotton>=0.2.0",
    "sqids>=0.5.2",
    "python-dotenv>=1.1.1",
    "django-widget-tweaks>=1.5.0",
    "psycopg[binary]>=3.2",
    "googlemaps>=4.10.0",
    # Production server
    "gunicorn>=23.0.0",
    "uvicorn>=0.40.0",
    "uvicorn-worker>=0.4.0",
    "whitenoise[brotli]>=6.7.0",
    "honcho>=2.0.0",
    # Database / config
    "dj-database-url>=2.2.0",
    # AWS (S3 media storage + SES email)
    "django-storages>=1.14.0",
    "boto3>=1.35.0",
    "django-anymail[amazon-ses]>=14.0",
    # Admin theme + background tasks
    "django-unfold>=0.65.0",
    # 0.12 dropped the database backend (DatabaseBackend + db_worker); pin to 0.11.x.
    "django-tasks>=0.11.0,<0.12",
    # Mobile API: django-ninja endpoints + Firebase ID-token verification.
    "django-ninja>=1.3.0",
    # email-validator backs ninja/pydantic's EmailStr field.
    "email-validator>=2.0.0",
    "firebase-admin>=6.5.0",
    # Allow the Flutter web build (separate origin/port) to call the API in dev.
    "django-cors-headers>=4.3.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "djlint>=1.36.4",
    "factory-boy>=3.3.3",
]

[tool.djlint]
ignore = ["D018"]
custom_html = "c-[\\w-]+"
